Implemented other service and repo layer along with controller

--- a/quiz-organiser/src/main/resources/application.yaml
+++ b/quiz-organiser/src/main/resources/application.yaml
@@ -1,3 +1,19 @@
 spring:
   application:
     name: quiz-organiser
+  datasource:
+    url: jdbc:mysql://localhost:3306/quizdb?useSSL=false&allowPublicKeyRetrieval=true@serverTimeZone=UTC
+    username: root
+    password: Mother@95
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+server:
+  port: 8080
