--- a/quiz-organiser/src/main/resources/application.yaml
+++ b/quiz-organiser/src/main/resources/application.yaml
@@ -1,19 +1,19 @@
 spring:
-  application:
-    name: quiz-organiser
   datasource:
-    url: jdbc:mysql://localhost:3306/quizdb?useSSL=false&allowPublicKeyRetrieval=true@serverTimeZone=UTC
+    url: jdbc:mysql://localhost:3306/quizdb?allowPublicKeyRetrieval=true&serverTimezone=UTC&useSSL=false
     username: root
     password: Mother@95
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      maximum-pool-size: 10
 
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
+    # properties:
+    #   hibernate:
+    #     dialect: org.hibernate.dialect.MySQL8Dialect
+
 
 server:
   port: 8080
